feat: to plug hotels api

--- a/src/app/styles/colors.scss
+++ b/src/app/styles/colors.scss
@@ -3,8 +3,11 @@
   --secondary: #1a1a19;
 
   --primary-text: #ffffff;
+  --secondary-text: #ececec;
 
   --primary-red: #ff667f;
+
+  --primary-shadow: rgba(186, 186, 186, 0.25);
 }
 
 .light {
@@ -12,6 +15,9 @@
   --secondary: #f8f9fc;
 
   --primary-text: #000000;
+  --secondary-text: #4a4a4a;
 
   --primary-red: #ff667f;
+
+  --primary-shadow: rgba(190, 190, 204, 0.25);
 }
