--- a/src/shared/ui/logo/styles.module.scss
+++ b/src/shared/ui/logo/styles.module.scss
@@ -5,5 +5,5 @@
   background-color: var(--primary-red);
   color: var(--primary);
   font-size: 32px;
-  font-family: 'Mulish-Bold';
+  font-family: "Mulish-Bold";
 }
