--- a/src/app/styles/default.scss
+++ b/src/app/styles/default.scss
@@ -5,7 +5,8 @@
 }
 
 .app {
-  min-height: 100vh;
-  font-family: 'Mulish';
+  height: 100vh;
+  overflow: auto;
+  font-family: Mulish;
   background-color: var(--secondary);
 }
