--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,3 +1,3 @@
-@use './default.scss';
-@use './fonts.scss';
-@use './colors.scss';
+@use "./default.scss";
+@use "./fonts.scss";
+@use "./colors.scss";
